# polyapp

./: .gitignore  CODEOWNERS  README.md
api/: README.md  flake.nix  pyproject.toml  shell.nix
api/src/: main.py
api/src/ai/: ai.py
api/src/db/: connect.py  polymers.db  script.sql
api/src/requests/: base.py  utilities.py
design/: README.md
requirements/: README.md
