[tool.poetry]
name = "api-polimeros"
version = "0.1.0"
description = ""
authors = ["Xelden <anpiz@protonmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
google-generativeai = "^0.5.3"
flask-cors = "^4.0.1"
markdown = "^3.6"
waitress = "^3.0.0"

[tool.poetry.scripts]
api-polimeros = 'src.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
